--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get in touch</title>
+    <title>Beauty Glow/Get in touch</title>
 </head>
 <body>
     <header>
