--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty Glow/News</title></title>
+    <title>Beauty Glow|News</title></title>
 </head>
 <body>
     <h1>News</h1>
