--- a/about.html
+++ b/about.html
@@ -3,70 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty Glow|About us</title>
+    <title>Beauty Glow | About Us</title>
+    <link rel="stylesheet" href="CSS/about.css">
 </head>
-<body>   
+<body>
     <header>
-        <div>
-            <div>
-                <img src="Images/Logo.jpg" width="100" height="100">
+        <div class="header-container">
+            <div class="logo-container">
+                <img src="Images/Logo.jpg" width="100" height="100" alt="Beauty Glow Logo">
             </div>
-            <div>
+            <nav class="nav-container">
                 <a href="./index.html">Home</a>
                 <a href="./gallery.html">Gallery</a>
                 <a href="./news.html">News</a>
                 <a href="./contact.html">Contact us</a>          
-                <a href="./about.html">About us </a> 
-            </div> 
+                <a href="./about.html" class="active">About us</a> 
+            </nav> 
         </div>
     </header>
 
-    <h1><u></b>About us</b></u><h1>
+    <main>
+        <div class="page-header">
+            <h1><span class="underline">About Us</span></h1>
+            <p class="tagline">Self care starts with skin care</p>
+        </div>
 
+        <div class="container">
+            <section class="about-intro">
+                <h2>About Beauty Glow</h2>
+                <p>At Beauty Glow we believe that healthy, radiant skin is a journey, not a destination.<br>
+                    Inspired by different ancient beauty rituals and powered by scientific innovation, we make skincare solutions that are not only effective but fun to use.<br>
+                    Our products are made in small batches with a unique blend of Asiatic acid, Cordata extract to address acne and dry skin. We are committed to using sustainable packaging, ethical sourcing, and creating a positive impact on the planet. 
+                    We value transparency and prioritize using clinically proven ingredients to deliver visible results.<br>
+                    Join our community of skincare lovers and discover the Beauty Glow difference.</p>
+            </section>
 
-        <div class="container"></div>
-        <header>
-            <h1>About Beauty Glow</h1>
-            <p>Self care starts with skin care</p>
-            <header>
-            <section>
-                <h1>About Us</h1>
-                <p>At Beauty Glow we believe that healthy,radiant skin is a journey, not a destination.Inspired by the different ancient beauty rituals and powered by scientific innovation,we make skincare solutions that are not only effective but fun to use.Our products are made in small batches with a unique blend of Asiatic acid ,Cordata extract to address acne and dry skin.We are committed to using sustainable packaging ,ethical sourcing,and creating a positive impact on the planet.We value transparency and prioritize using clinically proven ingredients to deliver visible results.Join our community of skincare lovers and discover the Beauty glow difference. </p>
-             <!--we tell the people more about Beauty glow-->
-                    <div>
-                        <h2>Our Mission & Vision</h2>
-                        <div>
-                            <div>
-                                <!--we make the people aware of what our mission is-->
-                                <h3>Our Mission</h3>
-                                <p>Our mission is to help young and middle-aged individuals bring their smile and confidence back through healthy and clear skin with our gentle dermatologically tested products.</p>
-                                </div>
-                                <div class="Vision">
-                                    <h4>Our Vision</h4>
-                                    <p>To revamp beauty by creating skin-positive products for all skin types , concerns and tones.Because every person deserves to feel seen.</p>
-                                    </div>
-                                    </div>
-                                    </div>
-                                    <div class="section"></div>
-                                    <h5>Our values</h5>
-                                    <div class="Values">
-                                        <div class="value-card">
-                                            <h6>Creativity</h6>
-                                            <p>We are committed to to providing value to our customers through the usage of ingredients that are not only safe but healthy to the skin.So that good results are achieved during the process.Our core values are quality,safety and effectiveness.</p>
-                                      <h7>Our Team</h7>
-                                      <p>The founder of Beauty Glow</p>
-                                       <img src="Images/WhatsApp Image 2025-08-25 at 23.10.07_d0c48fa0.jpg" alt="" height="300px" width="250px">
-                                        
-                                      <p>Our Cosmetologist</p>
-                                      <img src="Images/WhatsApp Image 2025-08-25 at 23.09.21_90b1a6b1.jpg" alt="" height="300px" width="300px">
+            <div class="mission-vision">
+                <h2>Our Mission & Vision</h2>
+                <div class="mv-container">
+                    <div class="mission">
+                        <h3>Our Mission</h3>
+                        <p>Our mission is to help young and middle-aged individuals bring their smile and confidence back through healthy and clear skin with our gentle dermatologically tested products.</p>
+                    </div>
+                    <div class="vision">
+                        <h3>Our Vision</h3>
+                        <p>To revamp beauty by creating skin-positive products for all skin types, concerns and tones. Because every person deserves to feel seen.</p>
+                    </div>
+                </div>
+            </div>
 
-                                      <p>Our Dermatologist</p>
-                                      <img src="Images/WhatsApp Image 2025-08-25 at 23.10.54_fabcdf73.jpg" alt="" height="300px" width="300px">
+            <div class="values">
+                <h2>Our Values</h2>
+                <div class="values-container">
+                    <div class="value-card">
+                        <h3>Creativity</h3>
+                        <p>We are committed to providing value to our customers through the usage of ingredients that are not only safe but healthy to the skin. So that good results are achieved during the process. Our core values are quality, safety and effectiveness.</p>
+                    </div>
+                </div>
+            </div>
 
-                                      <p>The Manager</p>
-                                      <img src="Images/WhatsApp Image 2025-08-25 at 23.17.27_24e3911d.jpg" alt="" height="300px" width="300px">
-                                      <footer>
-                                        <p>&copy;ST10471198</p>
-                                    </footer>     
+            <div class="team">
+                <h2>Our Team</h2>
+                <div class="team-container">
+                    <div class="team-member">
+                        <h3>The Founder of Beauty Glow</h3>
+                        <img src="Images/WhatsApp Image 2025-08-25 at 23.10.07_d0c48fa0.jpg" alt="Founder of Beauty Glow" height="300" width="250">
+                    </div>
+                    <div class="team-member">
+                        <h3>Our Cosmetologist</h3>
+                        <img src="Images/WhatsApp Image 2025-08-25 at 23.09.21_90b1a6b1.jpg" alt="Cosmetologist" height="300" width="300">
+                    </div>
+                    <div class="team-member">
+                        <h3>Our Dermatologist</h3>
+                        <img src="Images/WhatsApp Image 2025-08-25 at 23.10.54_fabcdf73.jpg" alt="Dermatologist" height="300" width="300">
+                    </div>
+                    <div class="team-member">
+                        <h3>The Manager</h3>
+                        <img src="Images/WhatsApp Image 2025-08-25 at 23.17.27_24e3911d.jpg" alt="Manager" height="300" width="300">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Beauty Glow</h3>
+                    <p>Creating radiant beauty with care and expertise since 2020.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Get In Touch</h3>
+                    <p>Johannesburg City Center, Johannesburg, 2000</p>
+                    <p>Phone: +27 87 654 3210</p>
+                    <p>Email: contact@beautyglow.co.za</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Navigation</h3>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./gallery.html">Services</a></li>
+                        <li><a href="./gallery.html">Portfolio</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Beauty Glow. All Rights Reserved. | ST10471198</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
