--- a/index.html
+++ b/index.html
@@ -3,35 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beauty Glow|Home</title>
+    <title>Beauty Glow | Home</title>
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
     <header>
-        <div>
-            <div>
-                <img src="Images/Logo.jpg" width="100" height="100">
+        <div class="header-container">
+            <div class="logo-container">
+                <img src="Images/Logo.jpg" width="100" height="100" alt="Beauty Glow Logo">
             </div>
-            <div>
-                <a href="./index.html">Home</a>
-                <a href="./gallery.html">Gallery</a>
-                <a href="./news.html">News</a>
-                <a href="./contact.html">Contact us</a>          
-                <a href="./about.html">About us </a> 
-            </div> 
+            <nav class="nav-container">
+                <a href="./index.html" class="nav-link active">Home</a>
+                <a href="./gallery.html" class="nav-link">Gallery</a>
+                <a href="./news.html" class="nav-link">News</a>
+                <a href="./contact.html" class="nav-link">Contact us</a>          
+                <a href="./about.html" class="nav-link">About us</a> 
+            </nav> 
         </div>
     </header>  
     <main>
-        <div>
-            <p1>Bringing back smiles one day at a time.</p1>
-            <!--Assuring our customers that indeed we will be the reason behind their smile-->
-            <img src="Images/WhatsApp Image 2025-08-21 at 12.50.28.jpeg" alt="" height="250px" width="250px">
-            <img src="Images/WhatsApp Image 2025-08-21 at 13.50.33_f8673d35.jpg" alt="" height="250px" width="250px">
-            <h2> Let us be the reason behind your smile</h2><br>
-            <p>Beauty Glow is a skincare brand that aims to bring people's glow back ,through the gentle products made to make skin more radiant.We believe in healthy skin , and that is our number 1 priority ,using healthy products to make healthy skin.</p>
+        <div class="hero-section">
+            <div class="hero-content">
+                <p class="tagline">Bringing back smiles one day at a time.</p>
+                <div class="image-container">
+                    <img src="Images/WhatsApp Image 2025-08-21 at 12.50.28.jpeg" alt="Beauty product" height="250" width="250">
+                    <img src="Images/WhatsApp Image 2025-08-21 at 13.50.33_f8673d35.jpg" alt="Beauty product" height="250" width="250">
+                </div>
+                <h2>Let us be the reason behind your smile</h2>
+                <p>Beauty Glow is a skincare brand that aims to bring people's glow back, through the gentle products made to make skin more radiant. We believe in healthy skin, and that is our number 1 priority, using healthy products to make healthy skin.</p>
+            </div>
         </div>
     </main>
     <footer>
-        <p>&copy;ST10471198</p>
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Beauty Glow</h3>
+                    <p>Creating radiant beauty with care and expertise since 2020.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Get In Touch</h3>
+                    <p>Johannesburg City Center, Johannesburg, 2000</p>
+                    <p>Phone: +27 87 654 3210</p>
+                    <p>Email: contact@beautyglow.co.za</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Navigation</h3>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./gallery.html">Services</a></li>
+                        <li><a href="./gallery.html">Portfolio</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Beauty Glow. All Rights Reserved. | ST10471198</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
